# translation-service

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile.api  README.md  docker-compose.paddleocr.yml  docker-compose.yml  pyproject.toml  vlm_server_config.yaml
app/: config.py  history.py  main.py  metrics.py  prompting.py  schemas.py  vllm_client.py
docs/: translation-api-reference.md  vllm-hy-mt15-7b-gptq-int4-deployment.md
manga_pipeline/: __init__.py
pdf_manga_translator/: __init__.py  batch_markdown.py  paddleocr_markdown.py
pdf_pipeline/: batch_markdown.py  markdown_pdf.py  markdown_translation.py
scripts/: batch-markdown-to-pdf.py  batch-pdf-to-markdown.py  batch-translate-markdown.py  docker_start.sh  docker_stop.sh  download_model.sh  manga-pipeline.py  monitor_throughput.py  pdf-to-markdown.py  run_api.sh  smoke_test.py  start_all.sh  start_dev.sh  start_vllm.sh  stop_all.sh
tests/: test_api.py  test_container_config.py  test_prompting.py
tests/manga_pipeline/: test_placeholder.py
tests/pdf_manga/: test_batch_markdown.py  test_markdown_pdf.py  test_markdown_translation.py  test_paddleocr_markdown.py
tests/pdf_pipeline/: test_batch_markdown.py  test_markdown_pdf.py  test_markdown_translation.py  test_paddleocr_markdown.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.vue  styles.css
web/src/lib/: sse.js
web/tests/: sse.test.js
